--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.21MB/s(Youtube:不良林), server: 213.183.59.214, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 新西兰-736.2KB/s(Youtube:不良林), server: 103.62.49.141, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-983.8KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 捷克-409.2KB/s(Youtube:不良林), server: ce.rutracker-cn.com, port: 443, type: trojan, password: 5y8y3CwxRVYhyfSY, sni: ce.rutracker-cn.com, skip-cert-verify: true}
-  - {name: 新西兰-828.9KB/s(Youtube:不良林), server: 103.62.49.141, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇳🇱 荷兰-931.7KB/s(Youtube:不良林), server: 213.183.59.214, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 38.143.66.99, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇳 中国-6.19MB/s(Youtube:不良林), server: 116.129.254.65, port: 63086, type: vmess, uuid: d9ac2f26-cc36-3faf-80c4-e2345cb25680, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 116.129.254.65}}
-  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 104.160.43.43, port: 443, type: vmess, uuid: a307a6f7-b697-400e-bc7e-e6356de877c2, alterId: 60, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /asdfaszzsdfa, ws-headers: {Host: 104.160.43.43}}
-  - {name: 🇨🇳 中国-1.43MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.79MB/s(Youtube:不良林), server: kr-07.freesocks5.tk, port: 28996, type: vmess, uuid: 97db7c58-0573-481a-c90c-bc8e41b6b89b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-317.1KB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.20MB/s(Youtube:不良林), server: aicoo6du.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: aicoo6du.com}}
+  - {name: 🇯🇵 日本-2.70MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-953.1KB/s(Youtube:不良林), server: usa-dallas.lvuft.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: usa-dallas.lvuft.com}}
+  - {name: 🇺🇸 美国-4.05MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.38MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 乌克兰-2.12MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
-      - 新西兰-736.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.8KB/s(Youtube:不良林)
-      - 捷克-409.2KB/s(Youtube:不良林)
-      - 新西兰-828.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-931.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.79MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-953.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 乌克兰-2.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
-      - 新西兰-736.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.8KB/s(Youtube:不良林)
-      - 捷克-409.2KB/s(Youtube:不良林)
-      - 新西兰-828.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-931.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.79MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-953.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 乌克兰-2.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
-      - 新西兰-736.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.8KB/s(Youtube:不良林)
-      - 捷克-409.2KB/s(Youtube:不良林)
-      - 新西兰-828.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-931.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.79MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-953.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 乌克兰-2.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
-      - 新西兰-736.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.8KB/s(Youtube:不良林)
-      - 捷克-409.2KB/s(Youtube:不良林)
-      - 新西兰-828.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-931.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.79MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-953.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 乌克兰-2.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
-      - 新西兰-736.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.8KB/s(Youtube:不良林)
-      - 捷克-409.2KB/s(Youtube:不良林)
-      - 新西兰-828.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-931.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.79MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-953.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 乌克兰-2.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
-      - 新西兰-736.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.8KB/s(Youtube:不良林)
-      - 捷克-409.2KB/s(Youtube:不良林)
-      - 新西兰-828.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-931.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.79MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-953.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 乌克兰-2.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
-      - 新西兰-736.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.8KB/s(Youtube:不良林)
-      - 捷克-409.2KB/s(Youtube:不良林)
-      - 新西兰-828.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-931.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.79MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-953.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 乌克兰-2.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
