--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-1.79MB/s(Youtube:不良林), server: kr-07.freesocks5.tk, port: 28996, type: vmess, uuid: 97db7c58-0573-481a-c90c-bc8e41b6b89b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林), server: 213.183.53.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇳🇱 荷兰-632.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇺🇸 美国-3.79MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇯🇵 日本-317.1KB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.20MB/s(Youtube:不良林), server: aicoo6du.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: aicoo6du.com}}
-  - {name: 🇯🇵 日本-2.70MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-953.1KB/s(Youtube:不良林), server: usa-dallas.lvuft.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: usa-dallas.lvuft.com}}
-  - {name: 🇺🇸 美国-4.05MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.38MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 乌克兰-2.12MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇺🇸 美国-5.39MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.33MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
+  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.40MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.85MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.79MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-632.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-953.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 乌克兰-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-1.79MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-632.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-953.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 乌克兰-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.79MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-632.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-953.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 乌克兰-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-1.79MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-632.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-953.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 乌克兰-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.79MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-632.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-953.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 乌克兰-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1.79MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-632.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-953.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 乌克兰-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1.79MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-632.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-953.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 乌克兰-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
