--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林), server: 213.183.53.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇳🇱 荷兰-632.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇺🇸 美国-3.79MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-317.1KB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.38MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 97.64.31.80, port: 247, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇳🇱 荷兰-832.6KB/s(Youtube:不良林), server: 213.183.59.214, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 38.143.66.99, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-5.39MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.33MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
-  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 🇺🇸 美国-3.40MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.85MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.62MB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
+  - {name: 🇺🇸 美国-3.89MB/s(Youtube:不良林), server: 172.96.192.100, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
+  - {name: 🇺🇸 美国-731.3KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-632.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-832.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-632.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-832.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-632.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-832.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-632.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-832.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-632.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-832.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-632.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-832.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-632.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-832.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
